[tool.poetry]
name = "sensor-health-check"
version = "0.1.0"
description = "A CLI Tool to analyse sensors data and inference the health status. Developed for Pre-FOCUS Assignment."
authors = ["Arun Pandian R <arunpandian.srk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pydantic = "^2.6.3"
polars = "^0.20.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
